# openanolis-kata-containers

src/libs/: Cargo.toml
src/libs/aeb/: Cargo.toml  run.sh
src/libs/aeb/src/: firmware.rs  launchdigest.rs  lib.rs  tdvf.rs
src/libs/aeb/src/grpc/: mod.rs
src/libs/aeb/src/grpc/proto/: keybroker.proto
src/libs/aeb/src/kbs/: mod.rs
src/libs/aeb/src/testdata/: cert_chain.cert
src/libs/aeb/test/: cmdline  tdhob
src/libs/kata-types/src/config/hypervisor/: mod.rs
src/runtime-rs/: Makefile
src/runtime-rs/config/: configuration-dragonball.toml.in
src/runtime-rs/crates/agent/src/: lib.rs
src/runtime-rs/crates/agent/src/kata/: agent.rs  trans.rs
src/runtime-rs/crates/hypervisor/: Cargo.toml
src/runtime-rs/crates/hypervisor/src/: lib.rs
src/runtime-rs/crates/hypervisor/src/ch/: inner_hypervisor.rs  mod.rs
src/runtime-rs/crates/hypervisor/src/dragonball/: inner.rs  mod.rs  vmm_instance.rs
src/runtime-rs/crates/hypervisor/src/qemu/: inner.rs  mod.rs
src/runtime-rs/crates/resource/src/: manager.rs  manager_inner.rs
src/runtime-rs/crates/resource/src/cpu_mem/: initial_size.rs  mem.rs
src/runtime-rs/crates/runtimes/common/src/: runtime_handler.rs  sandbox.rs
src/runtime-rs/crates/runtimes/src/: manager.rs
src/runtime-rs/crates/runtimes/virt_container/src/: lib.rs  sandbox.rs
src/runtime-rs/crates/runtimes/virt_container/src/container_manager/: container.rs  manager.rs
