[package]
name = "aeb"
version = "0.1.0"
description = "System Utilities for Kata Containers"
keywords = ["kata", "container", "runtime"]
authors = ["The Kata Containers community <kata-dev@lists.katacontainers.io>"]
repository = "https://github.com/kata-containers/kata-containers.git"
homepage = "https://katacontainers.io/"
readme = "README.md"
license = "Apache-2.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
async-std = { version = "1", features = ["attributes", "tokio1"] }
sev = { version = "1.1.0", features = ["openssl"] }
tonic = "0.5"
prost = "0.8"
anyhow = "1.0"
log = "0.4.14"
# "vendored" feature for openssl is required by musl build
openssl = { version = "0.10.38", features = ["vendored"] }
base64 = "0.13.0"
codicon = "3.0"
bincode = "1.3.3"
serde-big-array = "0.5.1"
hex="0.4.3"
sm3 = "0.4.1"
thiserror = "1.0"

[build-dependencies]
tonic-build = "0.5"

# [patch.crates-io]
# sev = { path = "/home/yanrong/sev" }

[dev-dependencies]
